--- a/Views/Medicos/Editar.cshtml
+++ b/Views/Medicos/Editar.cshtml
@@ -24,19 +24,19 @@
                         <div class="row">
                             <div class="col-md-6 mb-3">
                                 <label asp-for="Nombre" class="form-label fw-bold">Nombre</label>
-                                <input asp-for="Nombre" class="form-control border-verde" />
+                                <input asp-for="Nombre" class="form-control border-verde solo-letras" />
                                 <span asp-validation-for="Nombre" class="text-danger small"></span>
                             </div>
 
                             <div class="col-md-6 mb-3">
                                 <label asp-for="Apellido" class="form-label fw-bold">Apellido</label>
-                                <input asp-for="Apellido" class="form-control border-verde" />
+                                <input asp-for="Apellido" class="form-control border-verde solo-letras" />
                                 <span asp-validation-for="Apellido" class="text-danger small"></span>
                             </div>
 
                             <div class="col-md-6 mb-3">
                                 <label asp-for="Especialidad" class="form-label fw-bold">Especialidad</label>
-                                <input asp-for="Especialidad" class="form-control border-verde" />
+                                <input asp-for="Especialidad" class="form-control border-verde solo-letras" />
                             </div>
 
                             <div class="col-md-6 mb-3">
@@ -46,12 +46,12 @@
 
                             <div class="col-md-6 mb-3">
                                 <label asp-for="Telefono" class="form-label fw-bold">Teléfono</label>
-                                <input asp-for="Telefono" class="form-control border-verde" />
+                                <input asp-for="Telefono" class="form-control border-verde telefono-mask" />
                             </div>
 
                             <div class="col-md-6 mb-3">
                                 <label asp-for="Correo" class="form-label fw-bold">Correo Electrónico</label>
-                                <input asp-for="Correo" class="form-control border-verde" />
+                                <input asp-for="Correo" class="form-control border-verde correo-valido" />
                                 <span asp-validation-for="Correo" class="text-danger small"></span>
                             </div>
                         </div>
